<resources>
    <string name="app_name">ListApp</string>

    <string name="correo">Tu correo electrónico</string>
    <string name="contraseña">Tu contraseña</string>
    <string name="botón">Crear cuenta</string>
    <string name="login">Ya tengo una cuenta</string>

    <string name="nombreLogin">Nombre</string>
    <string name="passLogin">Contraseña</string>
    <string name="loginBoton">Conectarse</string>
    <string name="registrarseBoton">Registrarse</string>
    <string name="botonEliminarLista">Eliminar</string>
    <string name="botonAñadirLista">Añadir</string>



</resources>
